# stakeholder_atlas

./: .gitignore  .pre-commit-config.yaml  README.md
backend/: .env.example  main.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: enrich.py  openalex.py  prompts.py  storage.py  verify_links.py  web_search.py
backend/r_and_d/: testing.ipynb
backend/supabase/: config.toml
backend/supabase/migrations/: 20260701000000_initial_schema.sql  20260701100000_add_projects.sql
backend/test/: test_health.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/lib/: api.ts
