[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
description = "Stakeholder Atlas Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
    "pydantic-settings>=2.9.1",
    "pydantic>=2.13.4",
    "pyalex>=0.21",
    "openai>=2.44.0",
    "langchain-openai>=1.3.3",
    "langchain-core>=1.4.8",
    "supabase>=2.31.0",
]

[tool.setuptools]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pre-commit>=3.6.0",
    "ruff>=0.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
